--- a/src/components/GithubUser/githubuser.css
+++ b/src/components/GithubUser/githubuser.css
@@ -3,13 +3,17 @@
 	grid-template-columns: 1fr 1fr;
 	grid-row-gap: 5%;
 	grid-column-gap: 10%; 
-	margin: 5% 10% 10% 10%;
+	margin: 4% 10% 10% 10%;
 	padding: 5%;
 	border-radius: 10px;
 }
 
 .repo-tile {
 	display: flex;
+}
+
+.repo-tile:last-child {
+	margin-bottom: 15%;
 }
 
 .repo-image {
