--- a/src/components/GithubUser/githubuser.css
+++ b/src/components/GithubUser/githubuser.css
@@ -1,4 +1,4 @@
-.container {
+.repo-container {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-row-gap: 5%;
@@ -26,9 +26,15 @@
 	text-align: left;
 	padding-left: 20px;
 }
+
 .repo-heading {
 	font-size: 20px;
 	color: blue;
+	font-weight: 600;
+}
+
+.repo-heading > a {
+	text-decoration: none;
 }
 
 .repo-description {
